# ateam

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  TODO.md  default.nix  dist-workspace.toml  flake.nix  maintenance.sh  release-apple-darwin.sh  rust-toolchain.toml
.agents/skills/checker/: SKILL.md
.agents/skills/pusher/: SKILL.md
.agents/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml  rust.yml
.opencode/skills/maintenance-pr/: SKILL.md
.pi/extensions/: cargo-clippy.ts
src/: bin.rs  cli.rs  config.rs  filter.rs  lib.rs  main.rs  print.rs  query_1.graphql  render.rs  schema.graphql  table.rs  types.rs
src/client/: blame.graphql  blame.rs  codeowner.rs  followup.graphql  followup.rs  mod.rs  pr.graphql  pr2.graphql  schema.graphql  schema.quasinew..graphql  username.graphql  username.rs
