[package]
name = "ateam"
version = "0.8.1"
authors = ["Andrea Frigido"]
license = "MIT"
description = "The tool that helps optimize the code review process."
documentation = "https://github.com/frisoft/ateam"
homepage = "https://github.com/frisoft/ateam"
repository = "https://github.com/frisoft/ateam"
readme = "README.md"
edition = "2018"
keywords = ["cli", "github", "code-review", "pull-request", "command-line"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
failure = "^0.1"
graphql_client = "^0.9"
serde = "^1.0"
serde_json = "^1.0"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
terminal_size = "^0.1"
comfy-table = "^2.1"
structopt = "^0.3"
dotenv = "^0.15"
envy = "^0.4"
log = "^0.4"
env_logger = "^0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "^1.4"
rayon = "^1.5"
itertools = "^0.10"
