[package]
name = "ateam"
version = "0.8.5"
authors = ["Andrea Frigido"]
license = "MIT"
description = "The tool that helps optimize the code review process."
documentation = "https://github.com/frisoft/ateam"
homepage = "https://github.com/frisoft/ateam"
repository = "https://github.com/frisoft/ateam"
readme = "README.md"
edition = "2021"
keywords = ["cli", "github", "code-review", "pull-request", "command-line"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
incremental = true

[dependencies]
failure = "^0.1"
graphql_client = "^0.10"
serde = "^1.0"
serde_json = "^1.0"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
terminal_size = "^0.1"
comfy-table = "^5.0"
dotenv = "^0.15"
envy = "^0.4"
log = "^0.4"
env_logger = "^0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "^1.5"
rayon = "^1.5"
itertools = "^0.10"
clap = { version = "3.2.22", features = ["derive"] }
