[package]
name = "ateam"
version = "1.0.1"
authors = ["Andrea Frigido"]
license = "MIT"
description = "The tool that helps optimize the code review process."
documentation = "https://github.com/frisoft/ateam"
homepage = "https://github.com/frisoft/ateam"
repository = "https://github.com/frisoft/ateam"
readme = "README.md"
edition = "2021"
keywords = ["cli", "github", "code-review", "pull-request", "command-line"]

[lib]
name = "ateam"
path = "src/lib.rs"

[[bin]]
name = "ateam"
path = "src/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
incremental = true

[dependencies]
anyhow = "^1.0.65"
graphql_client = "^0.11"
serde = "^1.0"
serde_json = "^1.0"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
terminal_size = "^0.2"
comfy-table = "^6.1"
dotenv = "^0.15"
envy = "^0.4"
log = "^0.4"
env_logger = "^0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "^1.5"
itertools = "^0.10"
clap = { version = "^4.0", features = ["derive"] }
tokio = { version = "^1.21", features = ["full"] }
futures = "^0.3"
